# TimePayPro

./: README.md  package-lock.json  package.json
.github/workflows/: main.yml
src/: App.css  App.jsx
src-tauri/: Cargo.toml  Salary_Report.xlsx  employee_management.db  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: AddEmployeeForm.jsx  AttendanceTable.jsx  Calender.jsx  DetailedReport.jsx  EmployeeTable.jsx  PictureUpload.jsx  Reports.jsx  SalaryReport.jsx  Sidebar.jsx  SummaryReport.jsx
src/constants/: departments.js
src/context/: DatabaseContext.jsx
src/pages/: AddAdvance.jsx  AddEmployee.jsx  EmployeeDetail.jsx  Login.css  Login.jsx
src/utils/: index.js
